<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iSpartan</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">iSpartan</string>
    <string name="button_submit">Update Status</string>
    <string name="edit_status">Enter new status</string>
    <string name="address">Address</string>
    <string name="recommendation">Recommendation</string>
    <string name="submit_recommendation">Submit Recommendation</string>
    <string name="make_recommendation">Make Recommendation</string>
    <string name="add_alert">Add Alert</string>
    <string name="welcome_bug_droid_">Welcome Bug Droid!</string>
    <string name="recommendations">Recommendations</string>
    <string name="profile">profile</string>
    <string name="ispartan">iSpartan</string>
    <string name="for_students_">for students</string>
    <string name="employees_">employees</string>
    <string name="and_alumni_">alumni</string>
    <string name="logo">logo</string>
    <string name="location">Location</string>
    <string name="alert">Alert</string>
    <string name="current_status">Current Status </string>
    <string name="update">Update Status</string>
    <string name="start">logging in&#8230;</string>
    <string name="alerts">Alerts</string>
    <string name="status">New Status</string>
    <string name="status_hint">Tell the world how you\'re feeling!</string>
    <string name="rec_hint">No recommendations</string>
    <string name="alert_hint">No alerts</string>

</resources>